<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_student_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_student_chats"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_chats" />
    <item
        android:id="@+id/nav_student_calendar"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/nav_student_progress"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_progress" />
    <item
        android:id="@+id/nav_student_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
